# pdf_to_md

./: .gitignore  README.md  pyproject.toml
notebooks/: clean_pdf.ipynb
pdf_to_md/: cleaner.py  model.py  pdf.py  post.py  settings.py
